--- a/index.html
+++ b/index.html
@@ -14,3 +14,6 @@ WebAssembly.instantiateStreaming(fetch("ebiten.wasm"), go.importObject).then(res
     go.run(result.instance);
 });
 </script>
+<body>
+    <input id="input" type="file">
+</body>
