--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@ WebAssembly.instantiateStreaming(fetch("ebiten.wasm"), go.importObject).then(res
 <script>
     function saveImage(bytes) {
         console.log("js was called")
-        concole.log(bytes)
+        console.log(bytes)
     }
 </script>
