--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ WebAssembly.instantiateStreaming(fetch("ebiten.wasm"), go.importObject).then(res
         // console.log(bytes)
 
         // Uint8ArrayをBlobオブジェクトに変換
-        var blob = new Blob([receivedData], { type: 'image/png' }); // typeを適切な画像形式に合わせて設定
+        var blob = new Blob([bytes], { type: 'image/png' }); // typeを適切な画像形式に合わせて設定
 
         // BlobオブジェクトをURLに変換
         var imageUrl = URL.createObjectURL(blob);
