--- a/index.html
+++ b/index.html
@@ -40,10 +40,28 @@ WebAssembly.instantiateStreaming(fetch("ebiten.wasm"), go.importObject).then(res
 		// (参考) href の内容は DataURL 形式のテキストです。
 		console.log(a.href);
 		// ファイル名をセットする。
-		a.download = "hittsuki_result.png";
+		a.download = "hittsuki_" + getDate() + ".png";
 		// a タグをクリックする。リンクをクリックする動作になります。
 		a.click();
 
         alert('画像を保存しました！ストーリーに投稿してね！');
+    }
+
+    function getDate() {
+        let now = new Date();
+        let year = now.getFullYear();
+        let month = now.getMonth() + 1;
+        let date = now.getDate();
+        let hours = now.getHours();
+        let minutes = now.getMinutes();
+        let seconds = now.getSeconds();
+        month = month < 10 ? '0' + month : month;
+        date = date < 10 ? '0' + date : date;
+        hours = hours < 10 ? '0' + hours : hours;
+        minutes = minutes < 10 ? '0' + minutes : minutes;
+        seconds = seconds < 10 ? '0' + seconds : seconds;
+
+        let yyyymmddhhmmss = '' + year + month + date + hours + minutes + seconds;
+        return yyyymmddhhmmss;
     }
 </script>
