--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="icon" href="./icon512,png">
+        <link rel="icon" href="icon512,png">
         <title>ストーリーひっつき虫(Web版)</title>
     </head>
     <script src="wasm_exec.js"></script>
