--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="icon" href="icon512.png">
-        <title>ストーリーひっつき虫(Web版)</title>
+        <title>ストーリーひっつき虫(ブラウザ版)</title>
     </head>
     <script src="wasm_exec.js"></script>
     <script>
