--- a/index.html
+++ b/index.html
@@ -68,5 +68,11 @@
             let yyyymmddhhmmss = '' + year + month + date + hours + minutes + seconds;
             return yyyymmddhhmmss;
         }
+
+        function correctRotation(src) {
+            console.log(src.type)
+
+            return src
+        }
     </script>
 </html>
