--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             }
             ctx.drawImage(image_src, 0, 0, width, height);
             // Image Base64
-            return canvas.toDataURL(mime_type).arrayBuffer;
+            return canvas.toDataURL(mime_type);
         }
     </script>
 </html>
