--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
 
                     //あとはOrientation情報で写真の向きを補正させる
                     console.log(orientation.toString());
-                    if (orientation == 3) {
+                    if (orientation.toString() == "3") {
                         rotation = 180;
-                    } else if (orientation == 6) {
+                    } else if (orientation.toString() == "3") {
                         rotation = 90;
-                    } else if (orientation == 8) {
+                    } else if (orientation.toString() == "8") {
                         rotation = 270;
                     }
                 } else {
