--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                     if (orientation.toString() == "3") {
                         return 180;
                     } else if (orientation.toString() == "6") {
+                        console.log(90);
                         return 90;
                     } else if (orientation.toString() == "8") {
                         return 270;
