--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             console.log(src.type)
 
             let rotation = 0;
+            let finished = false;
             EXIF.getData(src, function(){ //EXIF.getDataでEXIF情報を取得
                 var exifData = EXIF.pretty(this);
 
@@ -83,20 +84,24 @@
                     //あとはOrientation情報で写真の向きを補正させる
                     console.log(orientation.toString());
                     if (orientation.toString() == "3") {
-                        return 180;
+                        rotation = 180;
                     } else if (orientation.toString() == "6") {
-                        console.log(90);
-                        return 90;
+                        rotation = 90;
                     } else if (orientation.toString() == "8") {
-                        return 270;
+                        rotation = 270;
                     }
                 } else {
                     console.log("doesn't have exif")
                 }
+
+                finished = true;
             });
 
+            while (!finished) {
+                console.log("waiting for callback")
+            }
 
-            return 0
+            return rotation;
         }
 
         function ImageResize(image_src, mime_type, width, height, rotate) {
