--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         }
 
         function fetchRotation() {
-            return localStorage.getItem('rotation')
+            return parseInt(localStorage.getItem('rotation'))
         }
 
         function ImageResize(image_src, mime_type, width, height, rotate) {
