--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
                         rotation = 90;
                     } else if (orientation.toString() == "8") {
                         rotation = 270;
+                    } else if (orientation.toString() == "0") {
+                        rotation = 90;
                     }
                 } else {
                     console.log("doesn't have exif")
